--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -1,17 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.fje.clot.sudoku.MainActivity">
+    android:background="@color/FonsBenvinguda"
+    tools:context="edu.fje.clot.sudoku.MainActivity"
+    android:weightSum="1">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:text="@string/app_name"
+        android:layout_width="301dp"
+        android:layout_height="56dp"
+        android:id="@+id/textView3"
+        android:gravity="center_vertical|center_horizontal"
+        android:fontFamily="sans-serif-condensed"
+        tools:fontFamily="cursive"
+        android:textSize="36sp"
+        android:textStyle="normal|bold"
+        android:layout_weight="0.39"
+        android:layout_gravity="center" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="350dp"
+        android:layout_height="257dp">
+
+        <TextView
+            android:text="@string/Maxpuntaucions"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:id="@+id/textView5"
+            android:layout_weight="1"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_vertical|center_horizontal" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/LlistaPuntuacions" />
+    </LinearLayout>
+
+    <Button
+        android:text="@string/jugar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:id="@+id/button"
+        android:layout_weight="0.07" />
+
+</LinearLayout>
