--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:text="@string/jugar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button"
+        android:id="@+id/play"
         android:layout_weight="0.07" />
 
 </LinearLayout>
