--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/FonsBenvinguda"
+    android:background="@color/colorBackground"
     tools:context="edu.fje.clot.sudoku.MainActivity"
     android:weightSum="1">
 
