Implementacion del sudoku parte 1 y 2

--- a/src/main/res/layout/activity_game.xml
+++ b/src/main/res/layout/activity_game.xml
@@ -10,5 +10,5 @@
         android:id="@+id/SudokuGridView"
         android:numColumns="9"
         android:horizontalSpacing="0dp"
-        android:verticalSpacing=dp"/>
+        android:verticalSpacing="0dp"/>
 </RelativeLayout>
