--- a/src/main/res/layout/activity_game.xml
+++ b/src/main/res/layout/activity_game.xml
@@ -5,10 +5,10 @@
     android:background="@color/colorBackground">
 
     <GridView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/SudokuGridView"
+        android:id="@+id/simpleGridView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:numColumns="9"
-        android:horizontalSpacing="0dp"
-        android:verticalSpacing="0dp"/>
+        android:verticalSpacing="2dp"
+        android:adjustViewBounds="true"/><!--50dp vertical space set between grid items-->
 </RelativeLayout>
