--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FFEF03</color>
-    <color name="colorBackground">#FFC103</color>
+    <color name="colorBackground">#FFC103</color>4
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 </resources>
