--- a/src/main/res/layout/emptycell.xml
+++ b/src/main/res/layout/emptycell.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="1"
+    android:background="@drawable/cell_shape">
+
+    <EditText
+
+
+        android:id="@+id/SudokuVariableNumber"
+        android:textStyle="normal|bold"
+        android:textSize="20sp"
+        android:inputType="numberSigned"
+        android:layout_weight="0.07"
+        android:gravity="center"
+        android:layout_height="40dp"
+        android:maxLength="1"
+        android:layout_width="30dp" />
 
 </RelativeLayout>
