--- a/src/main/res/layout/filledcell.xml
+++ b/src/main/res/layout/filledcell.xml
@@ -7,11 +7,11 @@
     >
 
     <TextView
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
         android:id="@+id/SudokuNumberFix"
         android:textStyle="normal|bold"
         android:textSize="20sp"
         android:layout_weight="0.07"
-        android:gravity="center" />
+        android:gravity="center"
+        android:layout_width="30dp"
+        android:layout_height="40dp" />
 </LinearLayout>
