--- a/src/main/res/layout/emptycell.xml
+++ b/src/main/res/layout/emptycell.xml
@@ -10,12 +10,15 @@
 
         android:id="@+id/SudokuVariableNumber"
         android:textStyle="normal|bold"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:inputType="numberSigned"
         android:layout_weight="0.07"
-        android:gravity="center"
+        android:gravity="center_horizontal|center"
         android:layout_height="40dp"
         android:maxLength="1"
-        android:layout_width="30dp" />
+        android:layout_width="30dp"
+        android:textColor="#666666"
+        android:textAlignment="center"
+        android:layout_marginLeft="5dp" />
 
 </RelativeLayout>
