--- a/src/main/res/layout/filledcell.xml
+++ b/src/main/res/layout/filledcell.xml
@@ -9,9 +9,12 @@
     <TextView
         android:id="@+id/SudokuNumberFix"
         android:textStyle="normal|bold"
-        android:textSize="20sp"
+        android:textSize="22sp"
         android:layout_weight="0.07"
-        android:gravity="center"
+        android:gravity="center_horizontal|center"
         android:layout_width="30dp"
-        android:layout_height="40dp" />
+        android:layout_height="40dp"
+        android:textColor="#000000"
+        android:textAlignment="center"
+        android:layout_marginLeft="5dp" />
 </LinearLayout>
