Coloreando de verde todas las celdas

--- a/src/main/res/layout/emptycell.xml
+++ b/src/main/res/layout/emptycell.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
+    android:focusable="true"
     android:id="@+id/EmptyCell"
     android:background="@drawable/cell_shape">
 
