--- a/src/main/res/layout/filledcell.xml
+++ b/src/main/res/layout/filledcell.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
+    android:focusable="true"
     android:background="@drawable/cell_shape"
-    >
+    android:id="@+id/FilledCell" >
 
     <TextView
         android:id="@+id/SudokuNumberFix"
         android:textStyle="normal|bold"
         android:textSize="22sp"
+        android:focusable="true"
+        android:clickable="true"
         android:layout_weight="0.07"
         android:gravity="center_horizontal|center"
         android:layout_width="30dp"
@@ -17,4 +20,4 @@
         android:textColor="#000000"
         android:textAlignment="center"
         android:layout_marginLeft="5dp" />
-</LinearLayout>
+</RelativeLayout>
