Solucionado el problema de los numeros

--- a/src/main/res/layout/emptycell.xml
+++ b/src/main/res/layout/emptycell.xml
@@ -21,7 +21,6 @@
         android:layout_width="30dp"
         android:textColor="#666666"
         android:textAlignment="center"
-        android:layout_marginLeft="5dp"
-        />
+        android:layout_marginLeft="5dp" />
 
 </RelativeLayout>
