--- a/src/main/res/layout/activity_game.xml
+++ b/src/main/res/layout/activity_game.xml
@@ -10,5 +10,7 @@
         android:layout_height="wrap_content"
         android:numColumns="9"
         android:verticalSpacing="0dp"
-        android:adjustViewBounds="true"/>
+        android:adjustViewBounds="true"
+        android:background="@drawable/cell_shape"
+       />
 </RelativeLayout>
