--- a/src/main/res/layout/filledcell.xml
+++ b/src/main/res/layout/filledcell.xml
@@ -16,6 +16,7 @@
         android:layout_weight="0.07"
         android:gravity="center_horizontal|center"
         android:layout_width="30dp"
+        android:focusableInTouchMode="true"
         android:layout_height="40dp"
         android:textColor="#000000"
         android:textAlignment="center"
