--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/colorBackground"
-    tools:context="edu.fje.clot.sudoku.MainActivity"
+    tools:context="edu.fje.clot.sudoku.activities.MainActivity"
     android:weightSum="1">
 
     <TextView
