20161121: vector bidimensional cargado desde XML * ahora el GameActivity carga el sudoku desde XML

--- a/src/main/res/values/matrix.xml
+++ b/src/main/res/values/matrix.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer-array name="matrix">
+    <integer-array name="matrix_1">
         <item>4</item>
         <item>7</item>
         <item>8</item>
