--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -51,11 +52,20 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="38dp"
+        app:srcCompat="@mipmap/help"
+        android:id="@+id/imageView2"
+        android:layout_weight="0.52"
+        android:visibility="visible" />
+
     <Button
         android:text="@string/jugar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/play"
         android:layout_weight="0.07" />
+
 
 </LinearLayout>
