--- a/src/main/res/layout/scorelist_item.xml
+++ b/src/main/res/layout/scorelist_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="60dp"
     android:minHeight="?attr/listPreferredItemHeight"
     android:orientation="vertical"
     android:paddingBottom="8dp"
@@ -12,10 +12,10 @@
 
     <ImageView
         android:id="@+id/item_image"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
 
     <TextView
         android:id="@+id/item_date"
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:text="Cargo"
         tools:text="1200"
-        android:textSize="36sp"
+        android:textSize="24sp"
         android:textStyle="normal|bold"
         android:layout_alignTop="@+id/item_date"
         android:layout_alignParentEnd="true"
