--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -33,7 +33,8 @@
         android:layout_height="272dp"
         android:baselineAligned="false"
         android:gravity="center_vertical|center_horizontal"
-        android:foregroundGravity="center_vertical|center_horizontal">
+        android:foregroundGravity="center_vertical|center_horizontal"
+        android:layout_marginBottom="30dp">
 
         <TextView
             android:text="@string/Maxpuntaucions"
@@ -53,19 +54,21 @@
     </LinearLayout>
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="38dp"
-        app:srcCompat="@mipmap/help"
+        android:layout_width="242dp"
+        android:layout_height="20dp"
         android:id="@+id/imageView2"
-        android:layout_weight="0.52"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:layout_gravity="center"
+        android:layout_weight="0.17"
+        android:layout_margin="20dp" />
 
     <Button
         android:text="@string/jugar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/play"
-        android:layout_weight="0.07" />
+        android:layout_weight="0.07"
+        android:textSize="18sp" />
 
 
 </LinearLayout>
