--- a/src/main/res/layout/activity_game.xml
+++ b/src/main/res/layout/activity_game.xml
@@ -1,16 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground">
+    android:background="@color/colorBackground"
+    android:id="@+id/activity_game">
 
-    <GridView
-        android:id="@+id/Graella"
-        android:layout_width="fill_parent"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="400dp">
+
+        <GridView
+            android:id="@+id/Graella"
+            android:layout_width="fill_parent"
+            android:numColumns="9"
+            android:verticalSpacing="0dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/cell_shape"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:numColumns="9"
-        android:verticalSpacing="0dp"
-        android:adjustViewBounds="true"
-        android:background="@drawable/cell_shape"
-       />
+        android:layout_marginBottom="34dp"
+        android:id="@+id/TxtVScore"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
