--- a/src/main/res/values/matrix.xml
+++ b/src/main/res/values/matrix.xml
@@ -88,93 +88,186 @@
         <item>4</item>
         <item>5</item>
         <item>2</item>
-        <item>5</item>
-        <item>3</item>
-        <item>1</item>
-        <item>2</item>
+        <item>9</item>
         <item>6</item>
-        <item>3</item>
+        <item>8</item>
         <item>1</item>
-        <item>6</item>
         <item>7</item>
-        <item>4</item>
-        <item>2</item>
+
+        <item>1</item>
+        <item>7</item>
         <item>8</item>
-        <item>9</item>
         <item>5</item>
-        <item>5</item>
+        <item>4</item>
+        <item>3</item>
+        <item>6</item>
         <item>9</item>
+        <item>2</item>
+
+
         <item>2</item>
         <item>6</item>
-        <item>1</item>
+        <item>9</item>
         <item>8</item>
         <item>7</item>
+        <item>1</item>
         <item>3</item>
         <item>4</item>
-        <item>6</item>
         <item>5</item>
-        <item>7</item>
+
+        <item>4</item>
         <item>2</item>
-        <item>3</item>
-        <item>1</item>
-        <item>9</item>
-        <item>4</item>
-        <item>8</item>
-        <item>1</item>
-        <item>3</item>
-        <item>9</item>
-        <item>4</item>
-        <item>8</item>
         <item>7</item>
         <item>6</item>
         <item>5</item>
+        <item>8</item>
+        <item>9</item>
+        <item>3</item>
+        <item>1</item>
+
+        <item>9</item>
+        <item>3</item>
+        <item>6</item>
+        <item>4</item>
+        <item>1</item>
+        <item>7</item>
+        <item>5</item>
         <item>2</item>
         <item>8</item>
+
+        <item>8</item>
+        <item>5</item>
+        <item>1</item>
+        <item>9</item>
+        <item>3</item>
         <item>2</item>
         <item>4</item>
-        <item>5</item>
+        <item>7</item>
         <item>6</item>
+
+        <item>6</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>8</item>
+        <item>4</item>
+        <item>7</item>
+        <item>5</item>
         <item>9</item>
+
+        <item>5</item>
+        <item>8</item>
+        <item>4</item>
+        <item>7</item>
+        <item>2</item>
+        <item>9</item>
+        <item>1</item>
+        <item>6</item>
+        <item>3</item>
+
+        <item>7</item>
+        <item>9</item>
+        <item>3</item>
+        <item>1</item>
+        <item>6</item>
+        <item>5</item>
+        <item>2</item>
+        <item>8</item>
+        <item>4</item>
+
+    </integer-array>
+    <integer-array name="matrix_3">
+        <item>2</item>
+        <item>8</item>
+        <item>3</item>
+        <item>6</item>
+        <item>7</item>
+        <item>4</item>
+        <item>9</item>
+        <item>1</item>
+        <item>5</item>
+
+        <item>5</item>
+        <item>9</item>
+        <item>7</item>
+        <item>8</item>
+        <item>1</item>
+        <item>3</item>
+        <item>2</item>
+        <item>6</item>
+        <item>4</item>
+
+
+        <item>4</item>
+        <item>1</item>
+        <item>6</item>
+        <item>2</item>
+        <item>5</item>
+        <item>9</item>
+        <item>7</item>
+        <item>3</item>
+        <item>8</item>
+
+        <item>8</item>
+        <item>6</item>
+        <item>2</item>
+        <item>9</item>
+        <item>4</item>
+        <item>5</item>
         <item>3</item>
         <item>7</item>
         <item>1</item>
-        <item>7</item>
-        <item>6</item>
+
         <item>3</item>
-        <item>8</item>
-        <item>2</item>
-        <item>5</item>
         <item>4</item>
         <item>1</item>
-        <item>9</item>
-        <item>9</item>
-        <item>4</item>
-        <item>5</item>
-        <item>1</item>
         <item>7</item>
+        <item>8</item>
+        <item>2</item>
         <item>6</item>
-        <item>2</item>
-        <item>8</item>
-        <item>3</item>
-        <item>2</item>
-        <item>8</item>
+        <item>5</item>
+        <item>9</item>
+
+        <item>7</item>
+        <item>5</item>
+        <item>9</item>
         <item>1</item>
         <item>3</item>
-        <item>9</item>
+        <item>6</item>
+        <item>8</item>
         <item>4</item>
+        <item>2</item>
+
+        <item>1</item>
+        <item>2</item>
+        <item>4</item>
+        <item>3</item>
+        <item>9</item>
+        <item>7</item>
         <item>5</item>
+        <item>8</item>
+        <item>6</item>
+
+        <item>9</item>
+        <item>3</item>
+        <item>5</item>
+        <item>4</item>
+        <item>6</item>
+        <item>8</item>
+        <item>1</item>
+        <item>2</item>
+        <item>7</item>
+
         <item>6</item>
         <item>7</item>
+        <item>8</item>
+        <item>5</item>
+        <item>2</item>
+        <item>1</item>
+        <item>4</item>
+        <item>9</item>
+        <item>3</item>
 
     </integer-array>
 
-    {{3,4,5,2,9,6,8,1,7},
-    {1,7,8,5,4,3,6,9,2},
-    {2,6,9,8,7,1,3,4,5},
-    {4,2,7,6,5,8,9,3,1},
-    {9,3,6,4,1,7,5,2,8},
-    {8,5,1,9,3,2,4,7,6},
-    {6,1,2,3,8,4,7,5,9},
-    {5,8,4,7,2,9,1,6,3},
-    {7,9,3,1,6,5,2,8,4}};
 </resources>
