Logica de la puntuacion realizada completament

--- a/src/main/res/layout/activity_game.xml
+++ b/src/main/res/layout/activity_game.xml
@@ -23,12 +23,13 @@
     </RelativeLayout>
 
     <TextView
-        android:text="TextView"
+        android:text="Punts: 0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="34dp"
         android:id="@+id/TxtVScore"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="36sp" />
 
 </RelativeLayout>
