--- a/src/main/res/drawable/cell_shapeblue.xml
+++ b/src/main/res/drawable/cell_shapeblue.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
          <stroke android:width="2dp"
                 android:color="#000000"
              />
-            <solid android:color="#D8F781" />
+            <solid android:color="#E0E6F8" />
 </shape>
