--- a/src/main/res/drawable/cell_shapeblue.xml
+++ b/src/main/res/drawable/cell_shapeblue.xml
@@ -3,5 +3,5 @@
          <stroke android:width="2dp"
                 android:color="#000000"
              />
-            <solid android:color="#E0E6F8" />
+            <solid android:color="#CECEF6" />
 </shape>
