--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorBackground"
+    android:background="@drawable/gradient"
     tools:context="edu.fje.clot.sudoku.activities.MainActivity"
     android:weightSum="1">
 
@@ -49,7 +49,8 @@
             android:layout_width="335dp"
             android:layout_height="198dp"
             android:id="@+id/LlistaPuntuacions"
-            android:layout_weight="0.43" />
+            android:layout_weight="0.43"
+           />
 
     </LinearLayout>
 
